--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,9 +54,15 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
+          NOTES_ARGS=""
+          if [ -f RELEASE_NOTES.md ]; then
+            NOTES_ARGS="--notes-file RELEASE_NOTES.md"
+          else
+            NOTES_ARGS="--generate-notes"
+          fi
           gh release create "${{ github.ref_name }}" dist/* \
             --title "${{ github.ref_name }}" \
-            --generate-notes || \
+            $NOTES_ARGS || \
           gh release upload "${{ github.ref_name }}" dist/* --clobber
 
   aur:
