Add initial Niri compositor support
Initial support for the Niri wayland compositor including:
- NiriIPC backend with monitor detection and config generation (KDL)
- udev DRM hotplug detection via pyudev for reliable monitor events
- Anti-loop detection for config-reload induced profile oscillations
- PNP() vendor prefix normalization for cross-compositor matching
- Compositor-specific option gating in the properties panel
  (disable Hyprland-only options on Sway/Niri)
- Workspace features hidden for Niri (native per-monitor workspaces)
- Cross-compositor config writing (Hyprland/Sway also write Niri config)
- Improved revert handling with pre-apply state snapshot

Refs #1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "PyGObject>=3.46",
 ]
 
+[project.optional-dependencies]
+udev = ["pyudev>=0.24"]
+
 [project.scripts]
 monique = "monique.app:main"
 moniqued = "monique.daemon:main"
